K8s-ingress/ingress-nginx-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: test
  namespace: default
spec:
  externalName: temp.frankfurt.micheal.ch
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ExternalName

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "https://frankfurt.micheal.ch"
    nginx.ingress.kubernetes.io/upstream-vhost: "https://frankfurt.micheal.ch"
  
  name: test
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: frankfurt.micheal.ch
    http:
      paths:
      - backend:
          service:
            name: test
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - frankfurt.micheal.ch
      secretName: tls-frankurt-micheal.ch-ingress
